deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: omni-orchestrator
spec:
  replicas: 1
  selector:
    matchLabels:
      component: omni-orchestrator-server
  template:
    metadata:
      labels:
        component: omni-orchestrator-server
    spec:
      containers:
        - image: opensourceway/omni-orchestrator:960aa021baf3f021d0bdca3df7fd310405aa982d
          imagePullPolicy: Always
          name: omni-orchestrator-server
          livenessProbe:
            httpGet:
              path: "/v1/health"
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: "/v1/health"
              port: 8080
            initialDelaySeconds: 20
            failureThreshold: 1
            periodSeconds: 5
            timeoutSeconds: 10
          resources:
            requests:
              cpu: 2000m
              memory: 2000Mi
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          volumeMounts:
            - mountPath: /app/config/app.toml
              name: config-volume
              subPath: app.toml
            # used for job templates, update this when template files add or removed
            - mountPath: /app/config/templates/buildimagefromrelease/configmap.yaml
              name: job-templates-volume
              subPath: buildimagefromrelease-configmap.yaml
            - mountPath: /app/config/templates/buildimagefromrelease/job.yaml
              name: job-templates-volume
              subPath: buildimagefromrelease-job.yaml
      serviceAccountName: omni-orchestrator
      volumes:
        - name: config-volume
          configMap:
            name: omni-orchestrator-config
        - name: job-templates-volume
          configMap:
            name: omni-orchestrator-templates
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: omni-cassandra
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      component: omni-cassandra-server
  template:
    metadata:
      labels:
        component: omni-cassandra-server
    spec:
      containers:
        - image: cassandra:4.0
          imagePullPolicy: Always
          name: omni-cassandra-server
          livenessProbe:
            tcpSocket:
              port: 9042
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 9042
            initialDelaySeconds: 20
            failureThreshold: 3
            periodSeconds: 5
            timeoutSeconds: 10
          resources:
            requests:
              cpu: 4000m
              memory: 4000Mi
          ports:
            - containerPort: 9042
              name: db
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/cassandra
              name: data-volume
      serviceAccountName: omni-orchestrator
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: omni-orchestrator-data
