deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: omni-orchestrator
spec:
  ports:
    - name: omni-orchestrator
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    component: omni-orchestrator-server
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: omni-cassandra
spec:
  ports:
    - name: omni-cassandra
      port: 9042
      protocol: TCP
      targetPort: 9042
  selector:
    component: omni-cassandra-server
  type: ClusterIP
