deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: omni-orchestrator-ingress
spec:
  rules:
    - host: log.test.osinfra.cn
      http:
        paths:
          - backend:
              service:
                name: omni-orchestrator
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - log.test.osinfra.cn
      secretName: omni-orchestrator-secret
